# xiaozhi-esp32-server

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DEVICE_CONNECTIVITY_GUIDE.md  Dockerfile  Dockerfile-server  Dockerfile-server-arm  Dockerfile-web  ENGLISH_ASR_MODELS_COMPARISON.md  ENGLISH_ASR_README.md  ENGLISH_ASR_SETUP.md  FALLBACK_IMPLEMENTATION.md  FIRMWARE_UPDATE_SYSTEM_DOCUMENTATION.md  MANAGER_API_DOCUMENTATION.md  MEM0_INTEGRATION_GUIDE.md  MOBILE_APP_INTEGRATION.md  README-build.md  README.md  README2.md  README_en.md  SILICONFLOW_FIXES.md  SILICONFLOW_SETUP_GUIDE.md  SILICONFLOW_TTS_UPDATES.md  TROUBLESHOOTING.md  VAD_ASR_FILTERING_IMPLEMENTATION_PLAN.md  VOICE_FORMAT_FIX.md  __init__.py  add_mem0_system_param.py  add_mqtt_params.sql  add_mqtt_params_railway.py  af  api_client.py  app.py  assistant_data.md  audio_flow.md  build-docker-images.sh  check_agent_functions.py  check_config.py  (+66 more)
main/live-agent-api/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  env.example  env_example.txt  init_db.sql  main.py  pyproject.toml
main/live-agent-api/api/: auth.py
main/live-agent-api/config/: __init__.py  logger.py  settings.py
main/live-agent-api/infra/: __init__.py  database.py  fishaudio.py  groq.py  openai.py  s3.py
main/live-agent-api/migrations/: 002_add_template_id_to_agents.sql  add_message_time.sql
main/live-agent-api/orm/: __init__.py  base.py
main/live-agent-api/repositories/: __init__.py  agent.py  agent_template.py  chat.py  device.py  file.py  memory_sharing.py  user.py  voice.py
main/live-agent-api/router/: __init__.py  agent.py  binding.py  device.py
main/live-agent-api/schemas/: __init__.py  agent.py  binding.py  chat.py  device.py  memory.py  user.py  voice.py
main/live-agent-api/services/: __init__.py  agent_service.py  binding_service.py  chat_service.py  device_service.py  llm_service.py  memory_service.py  stt_service.py  user_service.py  voice_service.py
main/live-agent-api/templates/: __init__.py  health_wellness.yaml  hospital_assistant.yaml  learning_companion.yaml  loader.py  personal_assistant.yaml
main/live-agent-api/utils/: __init__.py  exceptions.py  id_generator.py  response.py  security.py  ulid.py
main/turn_detection/: Dockerfile  main.py  pyproject.toml  requirements.txt  start_docker.sh  turn_det.py
main/xiaozhi-server/: .dockerignore  DEVICE_ACTIVATION_GUIDE.md  Dockerfile  INDIAN_NEWS_SETUP_COMPLETE.md  LLM_CONFIGURATION_GUIDE.md  START_SCRIPT_USAGE.txt  TENVAD_INTEGRATION.md  VAD_TUNING_GUIDE.md  VAD_UPGRADE_SUMMARY.md  add_indian_news_provider.py  add_missing_indian_news.py  agent-base-prompt.txt  app.py  check_database.py  check_database_structure.py  check_edge_voices.py  check_intent_functions.py  check_log_config.py  check_memories.py  check_plugin_mappings.py  check_tables.py  check_tts_config.py  check_tts_models.py  client.py  complete_params_translation.py  config.yaml  config_from_api.yaml  config_loader_patched.py  custom_config.yaml  debug_llm_loading.py  docker-compose-local.yml  docker-compose.test.yml  docker-compose.yml  docker-compose_all.yml  docker-compose_arm.yml  docker-compose_local_all.yml  docker-compose_sg_all.yml  docker-compose_us_all.yml  docker_compose_us_all.yml  final_language_update.py  (+49 more)
main/xiaozhi-server/asr_logs/: asr_log_20250819.csv  asr_log_20250819.txt  asr_log_20250821.csv  asr_log_20250821.txt
main/xiaozhi-server/config/: config_loader.py  functionCallConfig.py  live_agent_api_client.py  logger.py  manage_api_client.py  opus_loader.py  private_config.py  settings.py
main/xiaozhi-server/core/: auth.py  connection.py  connection_initialization.py  http_server.py  websocket_client.py  websocket_server.py
main/xiaozhi-server/data/: .config.yaml  .wakeup_words.yaml  xmu-chem-ta-prompt.txt
main/xiaozhi-server/docs/: mqtt-gateway-message-flow.md  ten-vad-integration.md
main/xiaozhi-server/examples/: ten_vad_example.py
main/xiaozhi-server/feedback-prompts/: asr-cleanup.txt  qa-structured.txt  review-generation.txt
main/xiaozhi-server/plugins_func/: loadplugins.py  register.py
main/xiaozhi-server/scripts/: export_fsmn_onnx.py  install_ten_vad.py  install_ten_vad_onnx.py  test_ten_vad.py  test_ten_vad_onnx.py
main/xiaozhi-server/test/: test_future_timeout_guard.py  test_mcp_null_id.py  test_null_tool_reply_guard.py  test_openai_think_tag.py  test_orphan_tool_message.py  test_page.html  test_place_search.py  test_tts_segment_split.py
main/xiaozhi-server/tests/: test_asr_filter.py  test_connection_initialization.py  test_external_speaker.py  test_external_speaker_ws.py  test_safety_alert.py  test_schedule_injection.py  test_ws_device_simulation.py  verify_current_speaker.py  (+5 more)
xiaozhi-memory/: LLM_EXTRACTION_DESIGN.md  README.md  __init__.py  config.yaml  pyproject.toml
xiaozhi-memory/core/: __init__.py  memory_manager.py
xiaozhi-memory/data/: test.db  test_memory.db
xiaozhi-memory/llm/: __init__.py  base.py
xiaozhi-memory/memories/: base.py
xiaozhi-memory/prompts/: __init__.py  fact_extraction.py
xiaozhi-memory/stores/: sqlite_store.py
xiaozhi-memory/utils/: __init__.py  tokenizer.py
(+1332 files in other folders)
