[project]
name = "xiaozhi-memory"
version = "0.1.0"
description = "轻量级AI记忆系统，支持多种检索模式"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jieba>=0.42.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
embedding = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
llm = [
    "openai>=1.0.0",
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "memories", "stores", "utils", "prompts", "api"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
