[project]
name = "live-agent-api"
version = "0.1.0"
description = "Live Agent Manager API - Python FastAPI implementation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-ulid>=3.1.0",
    "aioboto3>=15.5.0",
    "pyjwt>=2.9.0",
    "fish-audio-sdk>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.7.0",
]
